--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
                 </div>
                 <div class="tabText">
                     <h3>2022 - Present</h3>
-                    <p>Self-taught Frontend Developer</p>
+                    <p>SIAFL Company</p>
+                    <p>Frontend Developer</p>
                     <h3>2020 - 2023</h3>
                     <p>Company: Yuechang Football Academy</p>
                     <p>Position: Football Coach</p>
