--- a/index.html
+++ b/index.html
@@ -62,8 +62,13 @@
                 </div>
                 <div class="tabText">
                     <h3>2022 - Present</h3>
-                    <p>SIAFL Company</p>
-                    <p>Frontend Developer</p>
+                    <p>Company: SIAFL</p>
+                    <p>Position: Frontend Developer</p>
+                    <p>Shenzhen, China</p>
+                    <h3>2021 - 2022</h3>
+                    <p>Company: Code Flow</p>
+                    <p>Position: Frontend Developer</p>
+                    <p>Belgrade, Serbia</p>
                     <h3>2020 - 2023</h3>
                     <p>Company: Yuechang Football Academy</p>
                     <p>Position: Football Coach</p>
@@ -91,7 +96,8 @@
                 </div>
                 <div class="tabText">
                     <h3>Self-taught Frontend Developer</h3>
-                    <p>Online resources</p>
+                    <p>www.FreeCodeCamp.org</p>
+                    <p>www.codewars.com</p>
                     <p>Youtube Tutorials</p>
                     <p>Books</p>
                     <h3>Senior Football Coach</h3>
